--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <input type="submit" value="win" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
-<input type="submit" value="notbug" />
 <input type="submit" value="maybenotbug" />
+<input type="submit" value="notbug" />
 <input type="submit" value="build" />
 <input type="submit" value="encoding" />
 <input type="submit" value="test" />
@@ -23,18 +23,19 @@
 <input type="submit" value="arm" />
 <input type="submit" value="openssl" />
 <input type="submit" value="aix" />
-<input type="submit" value="ruby3" />
-<input type="submit" value="unfixable" />
 <input type="submit" value="solaris" />
+<input type="submit" value="unfixable" />
+<input type="submit" value="ruby3" />
 <input type="submit" value="haiku" />
-<input type="submit" value="backport" />
 <input type="submit" value="parser" />
-<input type="submit" value="wip-patch" />
 <input type="submit" value="autoload" />
+<input type="submit" value="wip-patch" />
+<input type="submit" value="backport" />
 <input type="submit" value="doc" />
 <input type="submit" value="fiber" />
 <input type="submit" value="linux" />
 <input type="submit" value="mips" />
+<input type="submit" value="uriencoding" />
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" />
@@ -657,10 +658,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;15276">URI.join behaviour is unintuitive</a>
 </td>
 </tr>
-<tr class=" openssl ">
+<tr class=" solaris openssl ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;15268">15268</a>
 </td>
-<td>openssl</td>
+<td>solaris openssl</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;15268">Solarisでtest/drb/test_drbssl.rbが落ちる</a>
 </td>
 </tr>
@@ -2799,10 +2800,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9115">Logger traps all exceptions; breaks Timeout</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" lib uriencoding ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9045">9045</a>
 </td>
-<td>lib</td>
+<td>lib uriencoding</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9045">URIに含まれるエンコードされたID/パスワードがデコードされない</a>
 </td>
 </tr>
@@ -3093,10 +3094,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;5334">Segmentation fault in InternetExplorer IServiceProvider interface</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" core maybenotbug ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;5317">5317</a>
 </td>
-<td>core</td>
+<td>core maybenotbug</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;5317">rubyのヘッダファイルを使った拡張を行う際にoff_tの宣言回避をする事が出来ない。</a>
 </td>
 </tr>
@@ -3121,10 +3122,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;4436">FileUtils verbose mode prints output to stderr</a>
 </td>
 </tr>
-<tr class=" thread ">
+<tr class=" thread maybenotbug ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;4434">4434</a>
 </td>
-<td>thread</td>
+<td>thread maybenotbug</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;4434">make test-all &quot;-j10000&quot; のように大きな並列数を与えると異常終了</a>
 </td>
 </tr>
