--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" core notbug ">
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16278">16278</a>
+<tr class=" lib ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">16281</a>
 </td>
-<td>core notbug</td>
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16278">Potential memory leak when an hash is used as a key for another hash</a>
+<td>lib</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">`irb -w` issues warning</a>
 </td>
 </tr>
 <tr class=" win ext maybenotbug ">
