--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">16281</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">`irb -w` issues warning</a>
 </td>
 </tr>
