--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Tagged Open Ruby Bugs</title>
+<title>443 Tagged Open Ruby Bugs as of 2019-10-27 16:13:29 -0700</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
