--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>443 Tagged Open Ruby Bugs as of 2019-10-27 16:13:29 -0700</title>
+<title>443 Tagged Open Ruby Bugs as of 2019-10-27 16:18:30 -0700</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" />
 <table>
-<caption>Tagged Open Ruby Bugs</caption>
+<caption>443 Tagged Open Ruby Bugs as of 2019-10-27 16:18:30 -0700</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
