--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>443 Tagged Open Ruby Bugs as of 2019-10-27 16:18:30 -0700</title>
+<title>445 Tagged Open Ruby Bugs as of 2019-10-31 05:42:17 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" />
 <table>
-<caption>443 Tagged Open Ruby Bugs as of 2019-10-27 16:18:30 -0700</caption>
+<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 05:42:17 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -49,6 +49,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch ext ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16285">16285</a>
+</td>
+<td>patch ext</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16285">Setting mtime to zero on Zlib::GzipWriter does nothing</a>
+</td>
+</tr>
+<tr class=" lib notbug ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16284">16284</a>
+</td>
+<td>lib notbug</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16284">Net/HTTP consuming multiple times more memory compared to other libraries</a>
+</td>
+</tr>
 <tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">16281</a>
 </td>
