--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>445 Tagged Open Ruby Bugs as of 2019-10-31 05:42:17 +0900</title>
+<title>445 Tagged Open Ruby Bugs as of 2019-10-31 05:58:50 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -38,9 +38,9 @@
 <input type="submit" value="uriencoding" />
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
-<input id="filter" type="text" />
+<input id="filter" type="text" size="80" />
 <table>
-<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 05:42:17 +0900</caption>
+<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 05:58:50 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
