--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>445 Tagged Open Ruby Bugs as of 2019-10-31 05:58:50 +0900</title>
+<title>445 Tagged Open Ruby Bugs as of 2019-10-31 06:49:11 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 <table>
-<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 05:58:50 +0900</caption>
+<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 06:49:11 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1239,10 +1239,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14266">Set#clone(freeze: false) makes frozen internal hash</a>
 </td>
 </tr>
-<tr class=" patch core ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14241">14241</a>
 </td>
-<td>patch core</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14241">Time.strptime() doesn&#39;t support the directive &quot;%W&quot;.</a>
 </td>
 </tr>
@@ -2786,17 +2786,17 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9189">Build failure on Windows in case of nonascii TEMP environment.</a>
 </td>
 </tr>
-<tr class=" lib notbug ">
+<tr class=" patch lib notbug ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9121">9121</a>
 </td>
-<td>lib notbug</td>
+<td>patch lib notbug</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9121">[PATCH] Remove rbtree implementation of SortedSet due to performance regression</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9115">9115</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9115">Logger traps all exceptions; breaks Timeout</a>
 </td>
 </tr>
