--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>445 Tagged Open Ruby Bugs as of 2019-10-31 06:49:11 +0900</title>
+<title>445 Tagged Open Ruby Bugs as of 2019-10-31 07:44:08 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 <table>
-<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 06:49:11 +0900</caption>
+<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 07:44:08 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1232,10 +1232,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14267">Lazy proc allocation introduced in #14045 creates regression</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14266">14266</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14266">Set#clone(freeze: false) makes frozen internal hash</a>
 </td>
 </tr>
