--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>445 Tagged Open Ruby Bugs as of 2019-10-31 07:44:08 +0900</title>
+<title>444 Tagged Open Ruby Bugs as of 2019-11-01 01:53:20 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 <table>
-<caption>445 Tagged Open Ruby Bugs as of 2019-10-31 07:44:08 +0900</caption>
+<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 01:53:20 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -49,6 +49,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" lib ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">16286</a>
+</td>
+<td>lib</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">DateTime.parse timezone errors</a>
+</td>
+</tr>
 <tr class=" patch ext ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16285">16285</a>
 </td>
@@ -61,13 +68,6 @@
 </td>
 <td>lib notbug</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16284">Net/HTTP consuming multiple times more memory compared to other libraries</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">16281</a>
-</td>
-<td>patch lib</td>
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16281">`irb -w` issues warning</a>
 </td>
 </tr>
 <tr class=" win ext maybenotbug ">
@@ -2308,13 +2308,6 @@
 </td>
 <td>lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;10919">[gem install] installs multipe platforms</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;10911">10911</a>
-</td>
-<td>lib</td>
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;10911">IPAddr.new should ignore zone identifiers</a>
 </td>
 </tr>
 <tr class=" core ">
