--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>444 Tagged Open Ruby Bugs as of 2019-11-01 01:53:20 +0900</title>
+<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:12:58 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,7 +40,7 @@
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 <table>
-<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 01:53:20 +0900</caption>
+<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:12:58 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1274,10 +1274,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14137">Windows / MinGW - Regexp - Character Properties - General Category</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14119">14119</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;14119">IPAddr#include? does not seem to support the subnet mask</a>
 </td>
 </tr>
