--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:12:58 +0900</title>
+<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:21:23 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -39,8 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
+(<span id="matched">444</span> matched)
 <table>
-<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:12:58 +0900</caption>
+<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:21:23 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
