--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:21:23 +0900</title>
+<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:30:23 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,7 +41,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">444</span> matched)
 <table>
-<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:21:23 +0900</caption>
+<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:30:23 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -2563,10 +2563,10 @@
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9877">IRB::OutputMethod defines &quot;pp&quot;, but it&#39;s actually &quot;p&quot;</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9836">9836</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;9836">Bad Implementation of Time.strptime</a>
 </td>
 </tr>
