--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>444 Tagged Open Ruby Bugs as of 2019-11-01 02:30:23 +0900</title>
+<title>443 Tagged Open Ruby Bugs as of 2019-11-01 02:39:02 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">444</span> matched)
+(<span id="matched">443</span> matched)
 <table>
-<caption>444 Tagged Open Ruby Bugs as of 2019-11-01 02:30:23 +0900</caption>
+<caption>443 Tagged Open Ruby Bugs as of 2019-11-01 02:39:02 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,18 +50,11 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" lib ">
+<tr class=" ext ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">16286</a>
 </td>
-<td>lib</td>
+<td>ext</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">DateTime.parse timezone errors</a>
-</td>
-</tr>
-<tr class=" patch ext ">
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16285">16285</a>
-</td>
-<td>patch ext</td>
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16285">Setting mtime to zero on Zlib::GzipWriter does nothing</a>
 </td>
 </tr>
 <tr class=" lib notbug ">
