--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>443 Tagged Open Ruby Bugs as of 2019-11-01 02:39:02 +0900</title>
+<title>443 Tagged Open Ruby Bugs as of 2019-11-01 04:03:43 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,7 +41,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">443</span> matched)
 <table>
-<caption>443 Tagged Open Ruby Bugs as of 2019-11-01 02:39:02 +0900</caption>
+<caption>443 Tagged Open Ruby Bugs as of 2019-11-01 04:03:43 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,10 +50,10 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" ext ">
+<tr class=" patch ext ">
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">16286</a>
 </td>
-<td>ext</td>
+<td>patch ext</td>
 <td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">DateTime.parse timezone errors</a>
 </td>
 </tr>
