--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>443 Tagged Open Ruby Bugs as of 2019-11-01 04:03:43 +0900</title>
+<title>450 Tagged Open Ruby Bugs as of 2019-11-18 10:41:58 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -24,13 +24,13 @@
 <input type="submit" value="openssl" />
 <input type="submit" value="aix" />
 <input type="submit" value="solaris" />
-<input type="submit" value="unfixable" />
 <input type="submit" value="ruby3" />
+<input type="submit" value="unfixable" />
 <input type="submit" value="haiku" />
+<input type="submit" value="backport" />
 <input type="submit" value="parser" />
 <input type="submit" value="autoload" />
 <input type="submit" value="wip-patch" />
-<input type="submit" value="backport" />
 <input type="submit" value="doc" />
 <input type="submit" value="fiber" />
 <input type="submit" value="linux" />
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">443</span> matched)
+(<span id="matched">450</span> matched)
 <table>
-<caption>443 Tagged Open Ruby Bugs as of 2019-11-01 04:03:43 +0900</caption>
+<caption>450 Tagged Open Ruby Bugs as of 2019-11-18 10:41:58 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,11 +50,60 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" patch ext ">
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">16286</a>
+<tr class=" core ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16350">16350</a>
 </td>
-<td>patch ext</td>
-<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16286">DateTime.parse timezone errors</a>
+<td>core</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16350">ArithmeticSequence#member? can result in infinite loop</a>
+</td>
+</tr>
+<tr class=" patch lib ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16349">16349</a>
+</td>
+<td>patch lib</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16349">Logger shift_age of 0 disables shift_size</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16344">16344</a>
+</td>
+<td>core</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16344">Can be assigned to numbered parameter when after used _1</a>
+</td>
+</tr>
+<tr class=" thread ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16342">16342</a>
+</td>
+<td>thread</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16342">macOS + Ruby 2.6.0 以降で拡張ライブラリ内での waitpid() コールに失敗する</a>
+</td>
+</tr>
+<tr class=" patch lib ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16339">16339</a>
+</td>
+<td>patch lib</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16339">Forwardable#def_delegator warns and is incorrect on trunk when passed keyword arguments</a>
+</td>
+</tr>
+<tr class=" build ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16338">16338</a>
+</td>
+<td>build</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16338">gemspec stub EOF separators throw warning</a>
+</td>
+</tr>
+<tr class=" backport core ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16334">16334</a>
+</td>
+<td>backport core</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16334">Wrong line numbers for multiline method chains </a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16288">16288</a>
+</td>
+<td>core</td>
+<td><a href="https:&#x2F;&#x2F;bugs.ruby-lang.org&#x2F;issues&#x2F;16288">Segmentation fault with finalizers, threads</a>
 </td>
 </tr>
 <tr class=" lib notbug ">
