--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>448 Tagged Open Ruby Bugs as of 2019-11-21 10:40:45 +0900</title>
+<title>454 Tagged Open Ruby Bugs as of 2019-11-26 13:00:18 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">448</span> matched)
+(<span id="matched">454</span> matched)
 <table>
-<caption>448 Tagged Open Ruby Bugs as of 2019-11-21 10:40:45 +0900</caption>
+<caption>454 Tagged Open Ruby Bugs as of 2019-11-26 13:00:18 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,48 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" thread ">
+<td><a href="https://bugs.ruby-lang.org/issues/16369">16369</a>
+</td>
+<td>thread</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16369">Segfault : crashed on child side of fork pre-exec thread_pool.rb</a>
+</td>
+</tr>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/16368">16368</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16368">Error in `YAML.load(symbolize_names: true)` with null column YAML</a>
+</td>
+</tr>
+<tr class=" win encoding ">
+<td><a href="https://bugs.ruby-lang.org/issues/16367">16367</a>
+</td>
+<td>win encoding</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16367">stdin not support ibm866 encoding for windows</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16366">16366</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16366">.count on endless range causes infinite loop</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16363">16363</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16363">Promote did_you_mean to default gem</a>
+</td>
+</tr>
+<tr class=" maybenotbug test ">
+<td><a href="https://bugs.ruby-lang.org/issues/16361">16361</a>
+</td>
+<td>maybenotbug test</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16361">TestEnv#test_fetch failure</a>
+</td>
+</tr>
 <tr class=" backport ">
 <td><a href="https://bugs.ruby-lang.org/issues/16357">16357</a>
 </td>
