--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>454 Tagged Open Ruby Bugs as of 2019-11-26 13:00:18 +0900</title>
+<title>455 Tagged Open Ruby Bugs as of 2019-11-27 08:44:49 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -20,28 +20,28 @@
 <input type="submit" value="refine" />
 <input type="submit" value="perf" />
 <input type="submit" value="regexp" />
-<input type="submit" value="arm" />
-<input type="submit" value="openssl" />
 <input type="submit" value="backport" />
-<input type="submit" value="solaris" />
+<input type="submit" value="openssl" />
+<input type="submit" value="arm" />
 <input type="submit" value="aix" />
-<input type="submit" value="unfixable" />
+<input type="submit" value="solaris" />
 <input type="submit" value="haiku" />
 <input type="submit" value="ruby3" />
+<input type="submit" value="unfixable" />
 <input type="submit" value="parser" />
 <input type="submit" value="autoload" />
-<input type="submit" value="wip-patch" />
 <input type="submit" value="doc" />
 <input type="submit" value="fiber" />
 <input type="submit" value="linux" />
-<input type="submit" value="mips" />
+<input type="submit" value="wip-patch" />
 <input type="submit" value="uriencoding" />
+<input type="submit" value="mips" />
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">454</span> matched)
+(<span id="matched">455</span> matched)
 <table>
-<caption>454 Tagged Open Ruby Bugs as of 2019-11-26 13:00:18 +0900</caption>
+<caption>455 Tagged Open Ruby Bugs as of 2019-11-27 08:44:49 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/16373">16373</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16373">RDoc for some of the Kernel methods cannot be found in Kernel module</a>
+</td>
+</tr>
+<tr class=" backport maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/16371">16371</a>
+</td>
+<td>backport maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16371">Inconsistent usage of Double splat operator</a>
+</td>
+</tr>
 <tr class=" thread ">
 <td><a href="https://bugs.ruby-lang.org/issues/16369">16369</a>
 </td>
@@ -307,13 +321,6 @@
 </td>
 <td>core ext maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16031">Inconsistency between Date::strptime and Time::strptime at the end of a month</a>
-</td>
-</tr>
-<tr class=" wip-patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16008">16008</a>
-</td>
-<td>wip-patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16008">Ripper hshptn node drops information</a>
 </td>
 </tr>
 <tr class=" core maybenotbug ">
