--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>455 Tagged Open Ruby Bugs as of 2019-11-27 08:44:49 +0900</title>
+<title>454 Tagged Open Ruby Bugs as of 2019-11-29 05:40:45 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -17,8 +17,8 @@
 <input type="submit" value="thread" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="tracepoint" />
-<input type="submit" value="refine" />
 <input type="submit" value="perf" />
+<input type="submit" value="refine" />
 <input type="submit" value="regexp" />
 <input type="submit" value="backport" />
 <input type="submit" value="openssl" />
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">455</span> matched)
+(<span id="matched">454</span> matched)
 <table>
-<caption>455 Tagged Open Ruby Bugs as of 2019-11-27 08:44:49 +0900</caption>
+<caption>454 Tagged Open Ruby Bugs as of 2019-11-29 05:40:45 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16376">16376</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16376">Stack-buffer-overflow in renumber_by_map in regcomp.c</a>
+</td>
+</tr>
 <tr class=" lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/16373">16373</a>
 </td>
@@ -202,13 +209,6 @@
 </td>
 <td>core perf </td>
 <td><a href="https://bugs.ruby-lang.org/issues/16243">case/when is slower than if on MRI</a>
-</td>
-</tr>
-<tr class=" patch refine ">
-<td><a href="https://bugs.ruby-lang.org/issues/16242">16242</a>
-</td>
-<td>patch refine</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16242">Refinements method call to failed</a>
 </td>
 </tr>
 <tr class=" patch win encoding ">
@@ -1616,13 +1616,6 @@
 </td>
 <td>win test</td>
 <td><a href="https://bugs.ruby-lang.org/issues/13485">MinGW TestEnumerable#test_callcc SEGV info</a>
-</td>
-</tr>
-<tr class=" patch refine ">
-<td><a href="https://bugs.ruby-lang.org/issues/13446">13446</a>
-</td>
-<td>patch refine</td>
-<td><a href="https://bugs.ruby-lang.org/issues/13446">refinements with prepend for module has strange behavior</a>
 </td>
 </tr>
 <tr class=" patch core ">
