--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>451 Tagged Open Ruby Bugs as of 2019-12-04 09:54:20 +0900</title>
+<title>447 Tagged Open Ruby Bugs as of 2019-12-04 15:00:32 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -20,29 +20,28 @@
 <input type="submit" value="perf" />
 <input type="submit" value="refine" />
 <input type="submit" value="regexp" />
+<input type="submit" value="backport" />
 <input type="submit" value="openssl" />
 <input type="submit" value="arm" />
-<input type="submit" value="backport" />
-<input type="submit" value="solaris" />
 <input type="submit" value="aix" />
+<input type="submit" value="solaris" />
 <input type="submit" value="haiku" />
 <input type="submit" value="ruby3" />
 <input type="submit" value="unfixable" />
-<input type="submit" value="doc" />
 <input type="submit" value="parser" />
 <input type="submit" value="autoload" />
+<input type="submit" value="doc" />
+<input type="submit" value="fiber" />
 <input type="submit" value="linux" />
 <input type="submit" value="wip-patch" />
-<input type="submit" value="fiber" />
 <input type="submit" value="uriencoding" />
 <input type="submit" value="mips" />
-<input type="submit" value="other" />
-<input type="submit" value="path" /></p>
+<input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">451</span> matched)
+(<span id="matched">447</span> matched)
 <table>
-<caption>451 Tagged Open Ruby Bugs as of 2019-12-04 09:54:20 +0900</caption>
+<caption>447 Tagged Open Ruby Bugs as of 2019-12-04 15:00:32 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -56,13 +55,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16398">Active Support unit test error since caac5f777ae288b5982708b8690e712e1cae0cf6</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16397">16397</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16397">Line coverage is broken for until and while after guard clause</a>
 </td>
 </tr>
 <tr class=" win core ">
@@ -86,10 +78,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16384">Cannot cross-compile 2.7: undefined method `each_builtin&#39; for RubyVM:Class (NoMethodError)</a>
 </td>
 </tr>
-<tr class=" path core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16383">16383</a>
 </td>
-<td>path core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16383">TracePoint does not report calls to attribute reader methods</a>
 </td>
 </tr>
@@ -182,13 +174,6 @@
 </td>
 <td>thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16342">macOS + Ruby 2.6.0 以降で拡張ライブラリ内での waitpid() コールに失敗する</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/16339">16339</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16339">Forwardable#def_delegator warns and is incorrect on trunk when passed keyword arguments</a>
 </td>
 </tr>
 <tr class=" build ">
@@ -371,13 +356,6 @@
 </td>
 <td>win encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15993">&#39;require&#39; doesn&#39;t work if there are Cyrillic chars in the path to Ruby dir</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/15980">15980</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15980">Coverage shows while/until after raise if/unless as uncovered line</a>
 </td>
 </tr>
 <tr class=" lib ">
@@ -826,13 +804,6 @@
 </td>
 <td>patch win </td>
 <td><a href="https://bugs.ruby-lang.org/issues/15204">globbing should be prevented when wildcard is surrounded by double quotes in the ruby&#39;s command line</a>
-</td>
-</tr>
-<tr class=" patch ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/15188">15188</a>
-</td>
-<td>patch ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15188">Incorrect warning &quot;assigned but unused variable&quot; when using ripper with $VERBOSE = true</a>
 </td>
 </tr>
 <tr class=" patch build ">
