--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>447 Tagged Open Ruby Bugs as of 2019-12-04 15:00:32 +0900</title>
+<title>447 Tagged Open Ruby Bugs as of 2019-12-04 15:02:46 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -41,7 +41,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">447</span> matched)
 <table>
-<caption>447 Tagged Open Ruby Bugs as of 2019-12-04 15:00:32 +0900</caption>
+<caption>447 Tagged Open Ruby Bugs as of 2019-12-04 15:02:46 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -78,10 +78,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16384">Cannot cross-compile 2.7: undefined method `each_builtin&#39; for RubyVM:Class (NoMethodError)</a>
 </td>
 </tr>
-<tr class=" patch core ">
+<tr class=" patch tracepoint ">
 <td><a href="https://bugs.ruby-lang.org/issues/16383">16383</a>
 </td>
-<td>patch core</td>
+<td>patch tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16383">TracePoint does not report calls to attribute reader methods</a>
 </td>
 </tr>
@@ -99,10 +99,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16373">RDoc for some of the Kernel methods cannot be found in Kernel module</a>
 </td>
 </tr>
-<tr class=" backport maybenotbug ">
+<tr class=" backport ">
 <td><a href="https://bugs.ruby-lang.org/issues/16371">16371</a>
 </td>
-<td>backport maybenotbug</td>
+<td>backport</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16371">Inconsistent usage of Double splat operator</a>
 </td>
 </tr>
