--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>447 Tagged Open Ruby Bugs as of 2019-12-04 15:02:46 +0900</title>
+<title>443 Tagged Open Ruby Bugs as of 2019-12-10 01:00:44 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -39,9 +39,9 @@
 <input type="submit" value="other" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">447</span> matched)
+(<span id="matched">443</span> matched)
 <table>
-<caption>447 Tagged Open Ruby Bugs as of 2019-12-04 15:02:46 +0900</caption>
+<caption>443 Tagged Open Ruby Bugs as of 2019-12-10 01:00:44 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,6 +50,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16406">16406</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16406">`(lambda_proc &lt;&lt; normal_proc).lambda?` returns true</a>
+</td>
+</tr>
 <tr class=" ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/16398">16398</a>
 </td>
@@ -62,13 +69,6 @@
 </td>
 <td>win core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16392">test-all failure MinGW - TestEncoding#test_nonascii_library_path</a>
-</td>
-</tr>
-<tr class=" win core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16391">16391</a>
-</td>
-<td>win core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16391">Dir.pwd, Dir[] pathname case inconsistency</a>
 </td>
 </tr>
 <tr class=" build ">
@@ -125,13 +125,6 @@
 </td>
 <td>win encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16367">stdin not support ibm866 encoding for windows</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16363">16363</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16363">Promote did_you_mean to default gem</a>
 </td>
 </tr>
 <tr class=" maybenotbug test ">
@@ -834,25 +827,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15072">thread.c:4356:5: error: implicit declaration of function ‘ubf_list_atfork’</a>
 </td>
 </tr>
-<tr class=" encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/15044">15044</a>
-</td>
-<td>encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15044">ENV encoding not UTF-8 by default</a>
-</td>
-</tr>
 <tr class=" win build ">
 <td><a href="https://bugs.ruby-lang.org/issues/15038">15038</a>
 </td>
 <td>win build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15038">Appveyor MinGW - bundled gems missing?</a>
-</td>
-</tr>
-<tr class=" encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/15033">15033</a>
-</td>
-<td>encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15033">Encoding fallback uses wrong character when multiple conversions are required</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -2477,13 +2456,6 @@
 </td>
 <td>tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10470">TracePoint cannot trace attr_accessor/reader/writer method</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/10466">10466</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10466">rb_eval_string_wrap does not actually wrap in a module binding</a>
 </td>
 </tr>
 <tr class=" patch ext ">
